fix(app): ensure text remains visible during webfont load for mclaren

--- a/static/mclaren/fonts/stylesheet.css
+++ b/static/mclaren/fonts/stylesheet.css
@@ -2,6 +2,7 @@
   font-family: 'McLaren';
   src: url('McLarenBespoke/McLarenBespoke_Lt.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 200;
 }
 
@@ -9,6 +10,7 @@
   font-family: 'McLaren';
   src: url('McLarenBespoke/McLarenBespoke_Lt.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 300;
 }
 
@@ -16,6 +18,7 @@
   font-family: 'McLaren';
   src: url('McLarenBespoke/McLarenBespoke_Rg.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 400;
 }
 
@@ -23,6 +26,7 @@
   font-family: 'McLaren';
   src: url('McLarenBespoke/McLarenBespoke_Rg.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 500;
 }
 
@@ -30,6 +34,7 @@
   font-family: 'McLaren';
   src: url('McLarenBespoke/McLarenBespoke_Bd.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 600;
 }
 
@@ -37,6 +42,7 @@
   font-family: 'McLaren';
   src: url('McLarenBespoke/McLarenBespoke_Bd.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 700;
 }
 
@@ -44,6 +50,7 @@
   font-family: 'NotoSans';
   src: url('NotoSans/NotoSans-Light.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 100;
 }
 
@@ -51,6 +58,7 @@
   font-family: 'NotoSans';
   src: url('NotoSans/NotoSans-Light.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 200;
 }
 
@@ -58,6 +66,7 @@
   font-family: 'NotoSans';
   src: url('NotoSans/NotoSans-Light.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 300;
 }
 
@@ -65,6 +74,7 @@
   font-family: 'NotoSans';
   src: url('NotoSans/NotoSans-Regular.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 400;
 }
 
@@ -72,6 +82,7 @@
   font-family: 'NotoSans';
   src: url('NotoSans/NotoSans-Regular.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 500;
 }
 
@@ -79,6 +90,7 @@
   font-family: 'NotoSans';
   src: url('NotoSans/NotoSans-Bold.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 600;
 }
 
@@ -86,5 +98,6 @@
   font-family: 'NotoSans';
   src: url('NotoSans/NotoSans-Bold.ttf');
   font-style: normal;
+  font-display: swap;
   font-weight: 700;
 }
